--- a/bin/install
+++ b/bin/install
@@ -1,11 +1,10 @@
 #!/usr/bin/env bash
-set -euo pipefail
+set -eo pipefail # remove the 'u' for now
 
-version="$1"
-install_path="$2"
+version="${1:-}"
+install_path="${2:-}"
 
-# Clone your fork at the given version
-GIT_REPO="https://github.com/superlistapp/flutter.git"
-
-# If the version is a commit/tag/branch name
-git clone --depth 1 --branch "$version" "$GIT_REPO" "$install_path"
+if [[ -z "$version" || -z "$install_path" ]]; then
+  echo "Missing version or install_path"
+  exit 1
+fi
